updated index, new subpages

--- a/main.css
+++ b/main.css
@@ -4,7 +4,8 @@ body {
     background: #f2f6e9;
 }
 .navbar {
-    background:#0b3b00;
+    background: #465e72;
+
 }
 .nav-link,
 .navbar-brand {
@@ -24,7 +25,7 @@ body {
 
 /* header background image */
 .header {
-    background-image: url('images/forest.jpg');
+    background-image: url('images/kpo.jpeg');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -48,10 +49,47 @@ body {
     text-align: center;
 }
 .description h1 {
-    color: #6ab446;
+    color: #465e72;
 }
 .description p {
     color: #fff;
     font-size: 1.3rem;
     line-height: 1.5;
+}
+
+/* column styles */ 
+.features {
+    margin: 4em auto;
+    padding: 1em;
+    position: relative;
+}
+.feature-title {
+    color: #333;
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+.features img {
+    -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+    margin-bottom: 16px;
+}
+
+
+/* contact */
+.features .form-control,
+.features input {
+    border-radius: 0;
+}
+.features .btn {
+    background-color: #589b37;
+    border: 1px solid #589b37;
+    color: #fff;
+    margin-top: 20px;
+}
+.features .btn:hover {
+    background-color: #333;
+    border: 1px solid #333;
 }
