finalized layout, added copy

--- a/main.css
+++ b/main.css
@@ -59,6 +59,7 @@ body {
     background-size: cover;
     background-position: center;
     position: relative;
+    height:%;
     margin-bottom: ;
 }
 
