--- a/main.css
+++ b/main.css
@@ -1,23 +1,25 @@
 body {
     padding: 0;
     margin: 0;
-    background: #f2f6e9;
-    position: relative;
+    background: rgba(248, 250, 255, 0.66);
+    
     
 }
 
+/*
 .padding {
-    padding: 2em;
+    margin-top: 2em;
 }
 
 /*--- Bootstrap Padding Fix --*/
-[class*="col-"] {
-    padding: 1.5em;
-}
-[class*="row"] {
-    padding-top: 2em;
+
+.padding{
+    padding:2em;
 }
 
+.spacer{
+    padding-top: 3em;
+}
 
 
 .navbar {
@@ -59,7 +61,7 @@ body {
     background-size: cover;
     background-position: center;
     position: relative;
-    height:%;
+    height:100%;
     margin-bottom: ;
 }
 
@@ -109,38 +111,15 @@ body {
 
 
 
-/*scrollspy*/
-body,html {
-    height: 100%;
+img {
+    box-shadow: 1px 1px 4px #000;
 }
-
-#sidemenu {
-   margin-top: 2em;
-    
-    
-}
-
-aside {
-    margin-left: 2em;
-    padding-left: 0em;
-    margin-top: 4em;
-}
-
-
-aside ul li {
-   margin-left: 0em;
-    padding-left: 0em; 
-    font-family: 'Poppins', sans-serif;
-    background:#;
-}
-
-
 
 
   
 
 
-/* Homepage cards */
+/* Homepage cards 
 .card {
     box-shadow: 2px 2px 10px #000;
     
@@ -165,6 +144,7 @@ aside ul li {
      
     
 }
+*/
 
 /* About */
 
